--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -318,3 +318,8 @@ body {
 #closing {
     padding-bottom: 2.5rem;
 }
+
+.sapUI5text {
+    font: 1.3em mplus-2p-light-sub,Helvetica,arial,freesans,clean,sans-serif !important; color:#000000;
+    -webkit-font-smoothing: subpixel-antialiased;
+}
